--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     "jspdf": "https://aistudiocdn.com/jspdf@^3.0.4",
     "html2canvas": "https://aistudiocdn.com/html2canvas@^1.4.1",
     "recharts": "https://aistudiocdn.com/recharts@^3.5.1",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
+    "@google/generative-ai": "https://esm.sh/@google/generative-ai@^0.21.0",
     "xlsx": "https://aistudiocdn.com/xlsx@^0.18.5",
     "vite": "https://aistudiocdn.com/vite@^7.2.6",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
